<resources>
    <string name="app_name">BMIApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_none_text">ここに画面タイトルを入れる</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="none_title_text">ここにタイトルど〜ん！</string>
    <string name="input_message_text">身長と体重を入力してください</string>
    <string name="height_text">身長</string>
    <string name="weight_text">体重</string>
    <string name="height_unit_text">cm</string>
    <string name="weight_unit_text">kg</string>
    <string name="calc_button_text">BMIを計算する</string>
    <string name="not_readale_image">背景が読み込めないよ！</string>
    <string name="result_start_message">あなたのBMIは</string>
    <string name="result_end_message">でした</string>
    <string name="not_result_message">00.0</string>
    <string name="memo_for_message_of_hint">ここに詳細を書いてね</string>
    <string name="save_button_text">保存する</string>
    <string name="delete_button_text">削除</string>
    <string name="not_title_image">画像がありません</string>
    <string name="list_column">日付</string>
    <string name="column_date">日付</string>
    <string name="column_height">身長 :</string>
    <string name="non_height_value">000.0</string>
    <string name="column_weight">体重 :</string>
    <string name="column_bmi">BMI :</string>
    <string name="month_section_text">月</string>
    <string name="not_month_section_text">01</string>
    <string name="date_row_type">日</string>
    <string name="default_decimal_text">000.0</string>
    <string name="default_decimal_short_text">00.0</string>
    <string name="not_memo_message">ここにメモを表示する</string>
</resources>
