<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="40dp" android:id="@+id/itemsList">
    <TextView
            android:text="@string/column_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/dateColumn"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginStart="150dp"
            app:layout_constraintTop_toTopOf="@+id/dateColumn"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightColumn" android:text="@string/default_decimal_text"
            app:layout_constraintTop_toTopOf="@+id/textView10" app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/column_height"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:id="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/dateColumn"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="@+id/dateColumn"
            app:layout_constraintBottom_toBottomOf="@+id/dateColumn"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightColumn" android:text="@string/default_decimal_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/textView7"
    />
    <TextView
            android:text="@string/weight_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/weightColumn"
            app:layout_constraintBottom_toBottomOf="@+id/weightColumn"
            app:layout_constraintTop_toTopOf="@+id/weightColumn" android:textAlignment="center"/>
    <TextView
            android:text="@string/column_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateColumn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" android:textSize="16sp"
            android:textAlignment="textEnd" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiColumn" android:text="@string/default_decimal_short_text"
            app:layout_constraintStart_toEndOf="@+id/textView000"
            app:layout_constraintTop_toTopOf="@+id/textView000"
            app:layout_constraintBottom_toBottomOf="@+id/textView000"
            app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/height_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/heightColumn"
            app:layout_constraintBottom_toBottomOf="@+id/heightColumn" app:layout_constraintStart_toEndOf="@+id/heightColumn"
    />
    <TextView
            android:text="@string/column_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView000"
            app:layout_constraintBottom_toBottomOf="@+id/dateColumn"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginStart="260dp"
            app:layout_constraintTop_toTopOf="@+id/dateColumn"/>
    <TextView
            android:text="@string/date_row_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/dateColumn"
            app:layout_constraintTop_toTopOf="@+id/dateColumn"
            app:layout_constraintBottom_toBottomOf="@+id/dateColumn" app:layout_constraintVertical_bias="1.0"
            android:textSize="16sp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="@android:color/darker_gray"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>