<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".presenter.ResultFragment" android:id="@+id/frameLayout3">
    <View
            android:layout_width="0dp"
            android:layout_height="210dp" android:id="@+id/result_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="@+id/result_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="@android:color/background_dark"
            android:id="@+id/horizontal_line"/>
    <TextView
            android:text="@string/result_start_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_start_message" app:layout_constraintEnd_toStartOf="@+id/bmiResult"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/bmiResult" app:layout_constraintBottom_toBottomOf="@+id/bmiResult"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/not_result_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiResult"
            app:layout_constraintTop_toTopOf="@+id/result_container" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="32sp"
            android:textStyle="bold" android:textAllCaps="false"/>
    <TextView
            android:text="@string/result_end_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_end_message" app:layout_constraintStart_toEndOf="@+id/bmiResult"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/bmiResult" app:layout_constraintBottom_toBottomOf="@+id/bmiResult"
            android:textSize="18sp"/>
    <EditText
            android:id="@+id/inputDetail"
            app:layout_constraintTop_toBottomOf="@+id/bmiResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/memo_for_message_of_hint"
            style="@style/input_multi_line_style" android:layout_height="80dp"
            android:background="@drawable/input_line_drawable"/>
    <Button
            android:text="@string/delete_button_text"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/delete"
            app:layout_constraintTop_toBottomOf="@+id/inputDetail"
            app:layout_constraintStart_toStartOf="@+id/inputDetail"
            style="@android:style/Widget.Material.Button.Colored" android:layout_marginTop="8dp"
            android:textSize="18sp" android:background="@drawable/delete_button_drawable"
            android:textColor="@android:color/black" android:textAllCaps="false"/>
    <Button
            android:text="@string/save_button_text"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/save"
            app:layout_constraintTop_toTopOf="@+id/delete" app:layout_constraintEnd_toEndOf="@+id/inputDetail"
            android:textSize="18sp" android:background="@drawable/sample_drawable"
            android:textColor="@android:color/black" app:layout_constraintBottom_toBottomOf="@+id/delete"/>
</androidx.constraintlayout.widget.ConstraintLayout>