<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".presenter.InputFragment" android:id="@+id/frameLayout2">
    <ImageView
            android:src="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/inputFragment" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:srcCompat="@android:color/background_light"
            android:contentDescription="@string/not_readale_image"
            app:layout_constraintTop_toBottomOf="@+id/view2"/>
    <TextView
            android:text="@string/input_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_message" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="18sp"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toTopOf="@+id/inputFragment" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/height_start_message"
            app:layout_constraintEnd_toStartOf="@+id/heightInput" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/heightInput"
            app:layout_constraintBottom_toBottomOf="@+id/heightInput"/>
    <TextView
            android:text="@string/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/weight_start_message"
            app:layout_constraintEnd_toStartOf="@+id/weightInput" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/weightInput"
            app:layout_constraintBottom_toBottomOf="@+id/weightInput"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/heightInput"
            app:layout_constraintTop_toBottomOf="@+id/main_message" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="123.4"
            android:background="@drawable/input_line_drawable" android:hint="@string/height_subject_hint"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightInput"
            android:layout_marginTop="8dp"
            android:autofillHints="34.5"
            app:layout_constraintTop_toBottomOf="@+id/heightInput" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:importantForAutofill="no"
            android:background="@drawable/input_line_drawable" android:hint="@string/weight_subject_hint"/>
    <TextView
            android:text="@string/height_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/height_end_message"
            app:layout_constraintStart_toEndOf="@+id/heightInput"
            app:layout_constraintBottom_toBottomOf="@+id/heightInput"
            android:textSize="18sp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/weight_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weight_end_message" app:layout_constraintStart_toEndOf="@+id/weightInput"
            app:layout_constraintBottom_toBottomOf="@+id/weightInput"
            android:textSize="18sp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/calc_button_text"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/calcButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weightInput" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="@+id/inputFragment" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:textSize="24sp"
            style="@android:style/Widget.Holo.Light.Button"
            android:background="@drawable/sample_drawable"
            app:layout_constraintBottom_toBottomOf="@+id/inputFragment"
            app:layout_constraintVertical_bias="0.13999999"/>
    <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:name="com.training.bmiapplication.presenter.ResultFragment"
            android:id="@+id/resultFragment"
            app:layout_constraintTop_toBottomOf="@+id/inputFragment" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_result"
            app:layout_constraintHorizontal_bias="1.0"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/view2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>